Delete Test Project and Change REST Path's

--- a/faltaUnoServer/pom.xml
+++ b/faltaUnoServer/pom.xml
@@ -27,6 +27,11 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>2.26-b03</version>
+        </dependency>
     </dependencies>
 
     <build>
